examples/test/testpolicy2923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2923
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key14: value12
      key34: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value12
      podSelector:
        matchLabels:
          key34: value25
          key47: value3
